# obs-yt-player

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_STRUCTURE.md  INSTANCE_PROTECTION_GUIDE.md  LICENSE  MERGE_SUMMARY.md  MIGRATION_NOTES.md  README.md  RESTRUCTURING_PLAN.md  RESTRUCTURING_SUMMARY.md  THREAD_PROGRESS.md  check_imports.py  cleanup_old_modules.bat  cleanup_old_phases.py  cleanup_phases.py  codecov.yml  complete_module_migration.py  create_new_ytplayer.bat  create_new_ytplayer_safe.bat  install.ps1  migrate_to_folders.py  pyproject.toml  rename_to_ytplay.py  setup_new_instance.py  test_loop_mode.py  test_playback_fix.py  test_playback_modes.py  test_single_mode_fix.py  update_all_instances.bat  update_all_instances_debug.bat  update_all_instances_safe.bat  yt_worship.py  ytfast.py  ytplay.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 01-overview.md  02-requirements.md  03-obs_api.md  04-guidelines.md  12-playback-modes.md  13-multi-script-setup.md  14-modular-architecture.md  AUDIT_REPORT.md  DOCUMENTATION_STRUCTURE.md  FOLDER_BASED_INSTANCES.md  INSTANCE_PROTECTION_GUIDE.md  WINDOWS_TESTING.md  logging-update.md  nested-scene-playback.md  nested-scene-update-summary.md
phases/: 05-Phase-01-Scaffolding.md  06-Phase-02-Dependency-Setup.md  06-Phase-02-Playlist-Sync.md  07-Phase-03-Caching.md  07-Phase-03-Playlist-Sync.md  08-Phase-04-Audio-Normalization.md  08-Phase-04-Caching.md  09-Phase-05-Audio-Normalization.md  09-Phase-05-Playback-Control.md  10-Phase-06-Metadata.md  10-Phase-06-Playback-Control.md  11-Phase-07-Final-Review.md  11-Phase-07-Metadata.md  12-Phase-08-Final-Review.md  Phase-01-Scaffolding.md  Phase-02-Dependency-Setup.md  Phase-03-Playlist-Sync.md  Phase-04-Caching.md  Phase-04-Serial-Processing.md  Phase-04-Video-Download.md  Phase-05-AcoustID-Metadata-CORRECTED.md  Phase-05-AcoustID-Metadata.md  Phase-05-Audio-Normalization.md  Phase-05-Gemini-Metadata.md  Phase-05-Metadata-Extraction.md  Phase-05b-iTunes-Metadata.md  Phase-06-Audio-Normalization.md  Phase-06-Playback-Control.md  Phase-06-Title-Parser-Fallback.md  Phase-06-iTunes-Metadata.md  Phase-07-Audio-Normalization.md  Phase-07-Metadata.md  Phase-07-Playback-Control.md  Phase-07-Stop-Playback.md  Phase-07-Title-Parser-Fallback.md  Phase-07-Universal-Metadata-Cleaning.md  Phase-08-Audio-Normalization.md  Phase-08-Final-Review.md  Phase-08-Playback-Control.md  Phase-08-Scene-Management.md  (+23 more)
scripts/: obs_launcher_template.bat  test_websocket.ps1
tests/: __init__.py  conftest.py  test_nested_scene_playback.py
tests/integration/: __init__.py  test_download.py  test_gemini_metadata.py  test_normalize.py  test_playlist.py  test_playlist_worker.py  test_reprocess.py  test_tools.py  test_tools_worker.py
tests/mocks/: __init__.py
tests/mocks/obspython/: __init__.py
tests/obs_integration/: __init__.py  test_media_control.py  test_opacity_control.py  test_playback_controller.py  test_scene.py  test_state_handlers.py  test_title_manager.py
tests/unit/: __init__.py  test_cache.py  test_config.py  test_metadata.py  test_play_history.py  test_state.py  test_utils.py  test_video_selector.py
yt-player-main/: README.md  VERSION  ytplay.py
yt-player-main/cache/: README.md
yt-player-main/ytfast_modules/: __init__.py  cache.py  media_control.py  normalize.py  playlist.py  reprocess.py  scene.py  utils.py
yt-player-main/ytplay_modules/: __init__.py  cache.py  config.py  download.py  gemini_metadata.py  logger.py  media_control.py  metadata.py  normalize.py  opacity_control.py  play_history.py  playback.py  playback_controller.py  playlist.py  reprocess.py  scene.py  state.py  state_handlers.py  title_manager.py  tools.py  utils.py  video_selector.py
ytfast_modules/: __init__.py  cache.py  config.py  download.py  gemini_metadata.py  logger.py  metadata.py  normalize.py  opacity_control.py  playback.py  playback_controller.py  playlist.py  reprocess.py  scene.py  state.py  state_handlers.py  title_manager.py  tools.py  utils.py
ytplay_modules/: __init__.py  cache.py  config.py  download.py  fix_imports.py  gemini_metadata.py  logger.py  main.py  media_control.py  metadata.py  normalize.py  opacity_control.py  playback.py  playback_controller.py  playlist.py  reprocess.py  scene.py  state.py  state_handlers.py  title_manager.py  tools.py  ui.py  utils.py
