[project]
name = "obs-yt-player"
version = "4.1.1"
description = "OBS Studio Python script for YouTube playlist playback with loudness normalization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "zbynekdrlik"}
]
keywords = ["obs", "youtube", "streaming", "obs-studio", "playlist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/zbynekdrlik/obs-yt-player"
Repository = "https://github.com/zbynekdrlik/obs-yt-player"
Issues = "https://github.com/zbynekdrlik/obs-yt-player/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt-player-main/ytplay_modules"]

# Dependency groups (replaces deprecated tool.uv.dev-dependencies)
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pre-commit>=4.0",
]

# Ruff - Fast Python linter and formatter
[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "cache",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["ytplay_modules"]

[tool.ruff.lint.per-file-ignores]
# Tests need special import ordering for mock injection
"tests/conftest.py" = ["E402", "I001"]
# Tests can use simpler file operations
"tests/**/*.py" = ["E402", "PTH123", "F841"]
# State module has module-level queue initialization after constants
"yt-player-main/ytplay_modules/state.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy - Static type checker
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "tests/mocks/",
    "cache/",
]

[[tool.mypy.overrides]]
module = "obspython.*"
ignore_missing_imports = true

# Modules with Windows-specific subprocess attributes
[[tool.mypy.overrides]]
module = [
    "ytplay_modules.normalize",
    "ytplay_modules.download",
    "ytplay_modules.playlist",
    "ytplay_modules.tools",
    "ytplay_modules.reprocess",
]
disable_error_code = ["attr-defined", "union-attr", "assignment"]

# Modules with dynamic state variables
[[tool.mypy.overrides]]
module = [
    "ytplay_modules.state",
    "ytplay_modules.state_handlers",
    "ytplay_modules.gemini_metadata",
    "ytplay_modules.logger",
    "ytplay_modules.scene",
]
disable_error_code = ["var-annotated", "assignment"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (mocked external dependencies)",
    "obs: Tests requiring mock OBS module",
    "slow: Tests that take significant time",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["yt-player-main/ytplay_modules"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/cache/*",
]
branch = true
parallel = true

[tool.coverage.paths]
source = [
    "yt-player-main/ytplay_modules",
]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    # OBS-specific code that can only be tested in OBS runtime
    "import obspython",
    "obs_get_source_by_name",
    "obs_source_release",
    "obs_frontend_",
    "timer_add",
    "timer_remove",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit - Security linter
[tool.bandit]
exclude_dirs = ["tests", "cache"]
skips = [
    "B101",  # Skip assert warnings (used in tests)
    "B310",  # Skip urllib.urlopen audit - we control all URLs (Gemini API, GitHub releases)
]
